--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,23 +1,9 @@
-version: "3.1"
-services:
-  redmin:
-    image: sasanrose/phpredmin
-    environment:
-      - PHPREDMIN_DATABASE_REDIS_0_HOST=redis
-    ports:
-      - "8002:80"
-    depends_on:
-      - redis
-    links:
-      - redis
+version: "3"
 
-  redis:
-    image: redis
+services:
+  mongodb:
+    image: mongo
+    container_name: mongodb
     restart: always
     ports:
-      - 6379:6379
-    volumes:
-      - redis-data:/data
-
-volumes:
-  redis-data:
+      - "27017:27017"
